Files storage Service (#1)
* File Storage Service Authentication + DB Integration

* updates

* Error Handlers

* doc generator removed + multer install

* Minimum CRUD on files test

* reform of auth module docs and types

* more error fixes

* Database modification

* File Storage reformat

* Fixes

* File Storage endpoints docs and error catch + FileMetadata

* Auth System - Reencrypt fix
